# OpenGL_Template

./: CMakeLists.txt  README.md  dependencies.txt  imgui.ini
config/: imgui.ini
shaders/: basic.frag  basic.vert
src/: main.cpp
src/app/: App.cpp  App.h
src/core/: Input.cpp  Input.h  RenderSettings.h
src/gfx/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
